# captiondb

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  vercel.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: exception_handlers.py  middleware.py  router.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/dependencies/: __init__.py  core.py  infrastructure.py  services.py
backend/app/domain/: exceptions.py
backend/app/schemas/: errors.py  health.py
backend/app/services/: ai.py  ai_pipeline.py  auth.py  authorization.py  cache.py  caption_generation.py  email_auth.py  file.py  frame.py  keyframe.py  metadata.py  oauth_auth.py  oauth_identity.py  oauth_registry.py  project.py  prompt_builder.py  scene.py  scene_result_integration.py  session.py  session_management.py  storage.py  task.py  task_monitoring.py  token.py  upload.py  video_analysis_pipeline.py  vision.py  vision_preparation.py
backend/migrations/: env.py
backend/migrations/versions/: 5311ba30791f_initial_schema.py
backend/tests/: conftest.py
backend/tests/infrastructure/: test_opencv_keyframe.py
backend/tests/services/: test_ai_pipeline.py  test_caption_generation.py  test_frame_sampling.py  test_keyframe_selection.py  test_prompt_builder.py  test_scene_engine.py  test_scene_result_integration.py  test_video_analysis_pipeline.py  test_vision_analysis.py  test_vision_preparation.py
backend/tests/unit/: test_config.py  test_exceptions.py  (+2 more)
(+275 files in other folders)
