[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captiondb"
version = "0.1.0"
description = "AI-powered video captioning backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "asgi-correlation-id>=4.3.1",
    "scenedetect>=0.6.3",
    "opencv-python-headless>=4.9.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.1.0",    
    "alembic>=1.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    ...
    "email-validator>=2.1.0",
    "alembic>=1.13.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80 -v"
testpaths = ["tests"]
asyncio_mode = "auto"
